--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -165,7 +165,7 @@
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          <children>
-                <VBox prefHeight="654.4" prefWidth="700.0" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <VBox prefHeight="654.4" prefWidth="700.0" styleClass="list-user-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label text="User Database">
                      <font>
@@ -175,11 +175,11 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </Label>
-                  <HBox prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #EFF4F4;">
+                  <HBox prefHeight="50.0" prefWidth="200.0" styleClass="table-header">
                      <children>
                         <AnchorPane prefHeight="50.0" prefWidth="212.0">
                            <children>
-                              <Label layoutX="72.0" layoutY="5.0" text="Name" textFill="#8f9bb3">
+                              <Label layoutX="72.0" layoutY="15.0" styleClass="database-label" text="Name" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -188,7 +188,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="28.0" layoutY="6.0" text="Username" textFill="#8f9bb3">
+                              <Label layoutX="28.0" layoutY="14.0" styleClass="database-label" text="Username" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -197,7 +197,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="30.0" layoutY="6.0" text="Usersince" textFill="#8f9bb3">
+                              <Label layoutX="30.0" layoutY="14.0" styleClass="database-label" text="Usersince" textFill="#8f9bb3">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -215,7 +215,7 @@
                         </AnchorPane>
                      </children>
                   </HBox>
-                  <ListView fx:id="userslist" prefWidth="100.0" style="-fx-border-color: white;" VBox.vgrow="ALWAYS" />
+                  <ListView fx:id="userslist" prefWidth="100.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                </children>
                <padding>
                   <Insets top="10.0" />
@@ -242,7 +242,7 @@
                         </HBox>
                     </bottom>
                <center>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 20;" BorderPane.alignment="CENTER">
+                  <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="manage-user-container" BorderPane.alignment="CENTER">
                      <center>
                               <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                            <children>
