fix(): fixed layout

--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/adminmenu.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/adminmenu.css
@@ -34,36 +34,40 @@
     -fx-font-family: "Arial", sans-serif;
 }
 
-.button {
+.side-bar-button {
     -fx-background-color: white;
     -fx-text-fill: #4a4a4a;
     -fx-font-size: 14px;
     -fx-cursor: hand;
 }
 
-.button:hover {
+.side-bar-button:hover {
+    -fx-background-color: #4A85F6;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+}
+
+.menu-button {
+    -fx-background-color: white;
+    -fx-text-fill: #4A85F6;
+}
+.logout-button {
+    -fx-background-color: white;
+    -fx-text-fill: #4a4a4a;
+    -fx-font-size: 17px;
+    -fx-cursor: hand;
+}
+
+.logout-button:hover {
     -fx-background-color: #4A85F6;
     -fx-text-fill: white;
 }
 
-.menu-button {
-    -fx-text-fill: #4A85F6;
+/* ButtonBar styling */
+.button-bar {
+    -fx-background-color: white;
+    -fx-spacing: 20px;
 }
-
-
-.edit-button {
-    -fx-background-color: #A4CC72;
-    -fx-text-fill: white;
-    -fx-background-radius: 5;
-}
-
-.remove-button {
-    -fx-background-color: #F64A4A;
-    -fx-text-fill: white;
-    -fx-background-radius: 5;
-}
-
-
 
 .submit-button{
     -fx-background-color: #4A85F6;
@@ -83,16 +87,32 @@
     -fx-background-radius: 5;
 }
 
-.logout-button {
-    -fx-background-color: white;
-    -fx-text-fill: #4a4a4a;
-    -fx-font-size: 17px;
+
+.edit-button {
+    -fx-background-color: #96bd67;
+    -fx-text-fill: white;
+    -fx-font-size: 15px;
     -fx-cursor: hand;
+    -fx-background-radius: 5;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
 }
 
-.logout-button:hover {
-    -fx-background-color: #4A85F6;
+.edit-button:hover {
+    -fx-background-color: #809f57;
+}
+
+.remove-button {
+    -fx-background-color: #dc4242;
     -fx-text-fill: white;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
+    -fx-background-radius: 5;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
+}
+
+
+.remove-button:hover {
+    -fx-background-color: #ba3838;
 }
 
 /* TopBar styling */
@@ -145,6 +165,11 @@
 /* Title styling */
 .container-label {
     -fx-text-fill: #222b45;
-    -fx-font-size: 19px;
+    -fx-font-size: 17px;
     -fx-font-family: "Arial", sans-serif;
+}
+
+.line {
+    -fx-border-color: #4A85F6;
+    -fx-border-width: 0.3;
 }
