--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -28,12 +28,11 @@
                         <Label layoutX="39.0" layoutY="16.0" styleClass="logo" text="PIXL Services" />
                     </children>
                 </AnchorPane>
-                <Text fill="#4a85f6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading" text="Menu Dashboard">
-                    <HBox.margin>
-                        <Insets top="20.0" />
-                    </HBox.margin>
-                </Text>
-            <Label styleClass="header-label" text="Menu Dashboard" />
+            <Label styleClass="heading" text="Menu Dashboard">
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin>
+            </Label>
                 <Region HBox.hgrow="ALWAYS" />
                 <HBox prefWidth="538.0" styleClass="search-bar" HBox.hgrow="ALWAYS">
                     <children>
@@ -94,7 +93,7 @@
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
                 <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
                     <children>
-                        <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" text="Home">
+                        <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Home">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -106,7 +105,7 @@
                                 <Insets />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" text="Users">
+                        <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Users">
                             <graphic>
                                 <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -124,7 +123,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" text="Stock">
+                        <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Stock">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -133,7 +132,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
-                        <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" text="Analytics">
+                        <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Analytics">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
@@ -163,18 +162,21 @@
     <right>
         <AnchorPane prefWidth="700.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
          <children>
-                <VBox prefHeight="654.4" prefWidth="600.0" styleClass="list-menu-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <VBox prefHeight="655.0" prefWidth="700.0" styleClass="list-menu-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label text="Item Details">
+                  <Label styleClass="container-label" text="Item Details">
                      <font>
                         <Font size="24.0" />
                      </font>
                      <VBox.margin>
-                        <Insets left="20.0" />
+                        <Insets />
                      </VBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" left="20.0" top="10.0" />
+                     </padding>
                   </Label>
                   <HBox prefHeight="50.0" prefWidth="200.0" styleClass="table-header">
                      <children>
@@ -230,10 +232,10 @@
     <center>
         <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
             <padding>
-                <Insets bottom="10.0" left="10.0" right="5.0" top="10.0" />
+                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
             </padding>
             <children>
-                <BorderPane prefHeight="654.4" prefWidth="469.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <BorderPane prefHeight="655.0" prefWidth="370.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <bottom>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
                             <children>
@@ -247,21 +249,24 @@
                      <center>
                               <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-menu-container" BorderPane.alignment="CENTER">
                            <children>
-                              <Label text="Menu Item Infomation">
+                              <Label prefWidth="185.0" styleClass="container-label" text="Menu Item Infomation">
                                  <padding>
-                                    <Insets left="20.0" top="20.0" />
+                                    <Insets left="10.0" top="10.0" />
                                  </padding>
                                  <font>
                                     <Font size="24.0" />
                                  </font>
                               </Label>
-                              <HBox prefHeight="0.0" prefWidth="0.0" style="-fx-border-color: #4a85f6;" />
+                              <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
+                              <Label text="Menu Item Name:" />
                               <TextField fx:id="menuitemnamefield" prefHeight="30.0" promptText="Menu Item Name *" />
+                              <Label text="Price:" />
                               <TextField fx:id="pricefield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Price *" />
                               <Label text="Item Type:" />
                               <ChoiceBox fx:id="itemtypefield" prefWidth="150.0" />
                               <Label text="Dietary Requirements" />
                               <ChoiceBox fx:id="dietaryrequirementsfield" prefWidth="150.0" />
+                              <Label text="Item Description:" />
                               <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Item Description *" />
                            </children>
                            <padding>
@@ -270,7 +275,7 @@
                         </VBox>
                      </center>
                      <bottom>
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
                           <buttons>
                             <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
                               <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddMenuItemButtonClick" styleClass="add-button" text="Add Item +" />
@@ -284,6 +289,9 @@
                            </padding>
                         </ButtonBar>
                      </bottom>
+                     <BorderPane.margin>
+                        <Insets />
+                     </BorderPane.margin>
                   </BorderPane>
                </center>
                 </BorderPane>
